force-app/main/default/objects/RV_LocationSteerChange__e/RV_LocationSteerChange__e.object-meta.xml
<CustomObject>
    <description>This Platform event is triggered on change of location steer value changes</description>
    <label>RV_LocationSteerChange</label>
    <pluralLabel>RV_LocationSteerChanges</pluralLabel>
</CustomObject>