force-app/main/default/objects/RV_LocationSteerChange__e/fields/Depot_Steer_mt__c.field-meta.xml
<CustomField>
    <fullName>Depot_Steer_mt__c</fullName>
    <label>Depot Steer(€/mt)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>