force-app/main/default/objects/RV_LocationSteerChange__e/fields/Manual_Adjustment_mt__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adjustment_mt__c</fullName>
    <label>Manual Adjustment(€/mt)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>