force-app/main/default/objects/RV_LocationSteerChange__e/fields/MOT__c.field-meta.xml
<CustomField>
    <fullName>MOT__c</fullName>
    <label>MOT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>