force-app/main/default/objects/RV_LocationSteerChange__e/fields/Origination_Steer_Type__c.field-meta.xml
<CustomField>
    <fullName>Origination_Steer_Type__c</fullName>
    <label>Origination Steer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>