force-app/main/default/objects/RV_LocationSteerChange__e/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <label>Plant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>