force-app/main/default/objects/RV_LocationSteerChange__e/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <label>Product Sub Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>