force-app/main/default/objects/RV_LocationSteerChange__e/fields/Scenario_Availability__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Availability__c</fullName>
    <label>Scenario Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>