force-app/main/default/objects/RV_LocationSteerChange__e/fields/Source_Steer_mt__c.field-meta.xml
<CustomField>
    <fullName>Source_Steer_mt__c</fullName>
    <label>Source Steer(€/mt)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>