force-app/main/default/objects/RV_LocationSteerChange__e/fields/Steer_Value_mt__c.field-meta.xml
<CustomField>
    <fullName>Steer_Value_mt__c</fullName>
    <label>Steer Value(€/mt)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>